# passaportoenergetico

./: .env.example  .env.production  .gitignore  CHECKLIST-DEPLOY.md  DEPLOY-GCP-ISTRUZIONI.md  DEPLOY-ONE-PAGE.md  DEPLOY-PRODUCTION.md  DNS-INSTRUCTIONS.md  QUICK-DEPLOY.md  README.md  RUNBOOK.md  VERIFICA-FINALE.md  deploy-gcp.sh  deploy.sh  docker-compose.production.yml  docker-compose.yml  setup-ssl.sh  test-manual.ps1  test-manual.sh
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  001_bollettometro_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes_admin.py  routes_public.py  schemas.py
backend/app/api/routes/: analysis.py  health.py  map.py  passport.py  result.py  session.py  share.py  storage_serve.py  (+1 more)
backend/app/core/: config.py  db_check.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/extraction/: ocr.py  parsers.py  pdf_text.py  pipeline.py
backend/app/rules/: engine.py  ruleset.py
backend/app/services/: cleanup.py  extract_schema.py  map_service.py  openai_extract.py  passport_generator.py  reports.py  share_card_generator.py  storage.py  submissions.py  trend_calc.py  zone_aggregates.py
backend/app/storage/: __init__.py  base.py  local.py  s3.py
backend/app/utils/: image_tools.py  pdf_tools.py  validation.py
backend/app/workers/: celery_app.py  tasks.py
backend/bollettometro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_smoke.py  test_extract_schema.py  test_rules_engine.py  test_trend_calc.py
(+37 files in other folders)
