[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passaporto-energetico-backend"
version = "0.1.0"
description = "Backend FastAPI per Passaporto Energetico"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11",
  "pytesseract>=0.3.10",
  "Pillow>=10.3",
  "boto3>=1.34",
  "python-dateutil>=2.9",
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

